samples/_failures_safe/1761595976_165993_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da1ff761.c: In function ‘main’:
./samples/SAFE/__tmp_da1ff761.c:162:27: error: expected ‘)’ at end of input
  162 |                 if (status
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_da1ff761.c:162:17: error: expected declaration or statement at end of input
  162 |                 if (status
      |                 ^~
./samples/SAFE/__tmp_da1ff761.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da1ff761.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da1ff761.c:162:17: error: expected declaration or statement at end of input
